<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Asterisk Digital Market</string>
    <string name="site_title">ADM Uganda</string>
    <string name="site_banner_description">
        Your No.1 Digital Marketplace
    </string>

    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>

    <!--Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">
        Don\'t have an account yet? <font color="#FFBD2A"><big><b>Register Now</b></big></font>
    </string>
    <string name="registration_successful">Registration successful!</string>

    <!--Register-->
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <font color="#FFBD2A"><big><b>Login</b></big></font></string>
    <string name="login_successful">Login Successful!</string>
    <string name="request_canceled">Request canceled</string>
    <string name="log_out">Log out</string>

<!--    uncomment line below for user of id referencing to find the string below.-->
<!--    <string name="default_web_client_id">40500932640-5gftrq13io5thtojdijbmhhp7og9s5q2.apps.googleusercontent.com</string>-->
    <string name="add_to_cart">Add To Cart</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="orders">Orders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>